<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

    </LinearLayout>
<LinearLayout
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/message"
        android:gravity="center"
        android:text="@string/ratemessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="17dp"/>
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="50">
    <Button
        android:id="@+id/rateme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:text="@string/rate"
        android:elevation="@dimen/abc_action_button_min_height_material"
        android:textColor="#ffffff"
        android:background="@color/blue_kerawa"
        android:layout_margin="10dp"/>
        <Button
            android:id="@+id/later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/later"
            android:elevation="@dimen/abc_action_button_min_height_material"
            android:textColor="#ffffff"
            android:background="@color/blue_kerawa"
            android:layout_margin="10dp"/>

    </LinearLayout>
</LinearLayout>