<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/blue_500"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/status_text"
        android:id="@+id/status_text"
        android:layout_gravity="center"
        android:padding="5dp"
        android:gravity="fill_vertical|center_horizontal"
        android:background="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minHeight="40dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/status_text"
        android:layout_toEndOf="@+id/loader2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:id="@+id/all_step">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_step">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/votre_mobile"
            android:hint="@string/votre_numero"
            android:enabled="true"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="#fff"
            android:nestedScrollingEnabled="true"
            android:linksClickable="false"
            android:clickable="true"
            tools:ignore="TextFields"
            android:textSize="18sp"
            android:phoneNumber="true"
            android:inputType="number|phone" />

        <EditText
            tools:ignore="TextFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/your_email"
            android:hint="@string/votre_email"
            android:enabled="true"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="#fff"
            android:nestedScrollingEnabled="true"
            android:linksClickable="false"
            android:clickable="true"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/step_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_choix_pays"
            android:id="@+id/intro_text"
            android:padding="5dp"
            android:textColor="#ff040404"
            android:layout_marginLeft="5dp"
            android:visibility="gone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords|textPersonName"
            android:ems="10"
            android:id="@+id/user_name"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#fff"
            android:hint="@string/user_names"
            android:paddingLeft="5dp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/liste_pays">

        </RadioGroup>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/liste_villes">

            </RadioGroup>

    </LinearLayout>

</LinearLayout>
</ScrollView>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_anim"
        android:background="@android:color/transparent"
        android:id="@+id/loader2"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scrollView" />

</RelativeLayout>
