<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/navigation_drawer_background"
        android:clipToPadding="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/footer"
        android:layout_margin="3dp"
        android:id="@+id/scroller">

        <LinearLayout
            android:id="@+id/navigation_drawer_linearLayout_entries_root_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/detail"
                android:minHeight="230dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#0691E6"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/primary_material_light"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#0691E6"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/cat1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.05"
                    android:paddingLeft="8dp"
                    android:text="@string/category"
                    android:textColor="@color/primary_material_light"
                    android:textSize="17sp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cat2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.05"
                    android:gravity="right"
                    android:paddingRight="15dp"
                    android:text="@string/blank_space"
                    android:textColor="@color/primary_material_light"
                    android:textSize="17sp"

                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/description1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="15sp"
                android:textAlignment="inherit"
                android:padding="7dp"
                android:layout_marginTop="7dp" />

            <WebView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/code_source" />


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#ff232323"
        android:gravity="center_vertical|center"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center|center_horizontal"
            android:orientation="horizontal"
            android:background="#ff181818">

            <Button
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:drawableTop="@drawable/ic_call"
                android:gravity="bottom|center"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"

                android:paddingTop="5dp"
                android:src="@drawable/ic_call"
                android:text="@string/call_text"
                android:background="@android:color/transparent"
                android:textColor="#ffffffff" />

            <Button
                android:id="@+id/sms"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:drawableTop="@drawable/ic_msg"
                android:gravity="bottom|center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/sms_text"
                android:textColor="#ffffffff"
                android:background="@android:color/transparent" />

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/blue_500"
                android:drawableTop="@drawable/abc_ic_menu_share_mtrl_alpha"
                android:gravity="bottom|center"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
                android:text="@string/share_text"
                android:background="@android:color/transparent"
                android:textColor="#ffffffff" />
        </RelativeLayout>
    </RelativeLayout>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_anim"
        android:background="@android:color/transparent"
        android:id="@+id/loader"
        android:layout_gravity="center_horizontal"
        android:layout_alignBottom="@+id/scroller"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:visibility="gone" />
</RelativeLayout>


