<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.kerawa.app.ActivityUserAccount$PlaceholderFragment">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_alignParentTop="true"
                android:id="@+id/linearLayout">

                <ImageView
                    android:layout_width="101dp"
                    android:layout_height="101dp"
                    android:id="@+id/imageView"
                    android:layout_alignRight="@+id/textView4"
                    android:layout_alignEnd="@+id/textView4"
                    android:src="@drawable/account_control" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Medium Text"
                        android:id="@+id/nom_user"
                        android:maxLines="1"
                        android:textColor="#2196f3" />

                    <TextView android:text="@string/hello_world"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_phone"
                        android:layout_margin="3dp"
                        android:drawableLeft="@drawable/ic_local_phone"
                        android:textAlignment="center"
                        android:gravity="center_vertical|center"
                        android:minWidth="133dp"
                        android:maxLines="1"
                        android:visibility="visible"
                        android:textColor="@color/blue_500" />

                    <TextView
                        android:text="@string/hello_world"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_email"
                        android:layout_margin="3dp"
                        android:drawableLeft="@drawable/ic_local_mail"
                        android:gravity="center_vertical|center_horizontal"
                        android:minWidth="133dp"
                        android:maxLines="1"
                        android:visibility="visible"
                        android:textColor="@color/blue_kerawa" />

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="#DADADC"
                android:focusable="false"
                android:id="@+id/separator"
                android:layout_below="@+id/linearLayout"/>
            <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/separator" />

        </RelativeLayout>
    </FrameLayout>
    <!-- The navigation drawer -->
    <RelativeLayout
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:weightSum="1"
        android:background="#ffffffff"
        android:clickable="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/country_title"
            android:background="@drawable/account_background"
            android:layout_alignParentTop="false"
            android:id="@+id/country"
             />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ads"
            android:id="@+id/action_add"
            android:background="@color/blue_500"
            android:layout_below="@+id/country"
            android:layout_marginTop="20dp"
            android:gravity="center|center_horizontal"
            android:padding="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_logout"
            android:id="@+id/action_logout"
            android:background="#ffff5f4c"
            android:layout_below="@+id/action_add"
            android:layout_marginTop="20dp"
            android:gravity="center|center_horizontal"
            android:padding="5dp"
            android:visibility="invisible" />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
